--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,12 +24,13 @@
             android:id="@+id/searchbar"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="10dp"
             android:iconifiedByDefault="false"
-            android:queryHint="Search restaurant"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:queryHint="Search"
+            app:layout_constraintEnd_toStartOf="@+id/city_spinner"
             app:layout_constraintStart_toEndOf="@+id/profile"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+        </SearchView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
@@ -38,7 +39,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile" />
+            app:layout_constraintTop_toBottomOf="@+id/profile"
+            tools:listitem="@layout/item_layout"/>
+
+        <Spinner
+            android:id="@+id/city_spinner"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:background="#00FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/searchbar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
